# emojikanban

./: .gitignore  Cargo.toml  build.rs  build_win_and_linux.sh  copy_dyn_libs_to_bin.sh  emotes.db3  lin_build.sh  readme.md  win_build.bat  win_build.sh  win_install.bat
src/: config_kdl.rs  confparse.rs  effects.rs  lib.rs  main.rs  plugin.rs
