[package]
name = "emojikanban"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ekb"
path = "src/main.rs"

[lib]
name = "emojikanban"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.100"
env_logger = "0.11.8"
futures = "0.3.31"
glam = "0.31.0"
home = "0.5.12"
image = "0.25.9"
irc = "1.1.0"
log = "0.4.29"
nom = "8.0.0"
obs-wrapper = "0.4.1"
rand = "0.9.2"
reqwest = "0.12.28"
rusqlite = "0.38.0"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "net", "time"] }
twitch_api = { version = "0.7.2", features = ["helix", "reqwest"] }
twitch_message = "0.1.2"
